<resources>
    <string name="app_name">AndroidAcademyHomework</string>
    <string name="back">Back</string>
    <string name="tag">Action, Adventure, Fantasy</string>
    <string name="storyline">Storyline</string>
    <string name="after_the_d">
        After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.
    </string>
    <string name="heading">Cast:</string>
    <string name="robertdowneyjr">Robert Downey Jr.</string>
    <string name="warszawa_po">Movies List</string>
    <string name="tag_list">Action, Adventure, Drama</string>
    <string name="name">125 REVIEWS</string>
    <string name="cinema_title_name">Avengers: End Game</string>
    <string name="min">137 MIN</string>
    <string name="movies_list">Movies List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="now_play">Now play</string>
    <string name="popular">Popular</string>
    <string name="favourite">Favourite</string>
    <string name="top_rated">Top rated</string>
    <string name="upcoming">Upcoming</string>
</resources>