<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
    <View
        android:id="@+id/bg"
        android:layout_width="@dimen/width_bg_list"
        android:layout_height="@dimen/height_bg_list"
        android:layout_marginStart="@dimen/marg_start_bg_list"
        android:layout_marginTop="@dimen/margin_top_view"
        android:background="@drawable/ic_bg"
        android:elevation="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/movie_img"
        android:layout_width="@dimen/width_img_list"
        android:layout_height="@dimen/height_img_list"
        android:layout_marginStart="@dimen/marg_st_img_list"
        android:layout_marginTop="@dimen/margin_top_image"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/heroes" />
    <View
        android:id="@+id/mask"
        android:layout_width="@dimen/width_msk"
        android:layout_height="@dimen/height_msk"
        android:layout_marginStart="@dimen/margin_st_msk"
        android:layout_marginTop="@dimen/marg_top_mask"
        android:background="@drawable/ic_mask___movie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/tag"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_tag_list"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/marg_st_tag_list"
        android:layout_marginTop="@dimen/marg_top_tag_list"
        android:gravity="center_vertical"
        android:lineSpacingExtra="3sp"
        android:text="@string/tag_list"
        android:textAppearance="@style/tag"
        app:layout_constraintStart_toStartOf="@+id/movie_img"
        app:layout_constraintTop_toTopOf="@+id/movie_img" />
    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rating"
        style="?android:attr/ratingBarStyleSmall"
        android:numStars="5"
        android:scaleX=".5"
        android:scaleY=".5"
        android:transformPivotX="0dp"
        android:transformPivotY="0dp"
        android:rating="5"
        android:stepSize="0.5"
        android:isIndicator="true"
        android:progressTint="#FF3365"
        android:layout_marginTop="1dp"
        android:layout_marginStart="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tag" />
    <TextView
        android:id="@+id/name"
        android:layout_width="@dimen/width_reviews"
        android:layout_height="@dimen/height_reviews"
        android:layout_marginStart="@dimen/margin_start_reviews"
        android:layout_marginTop="@dimen/margin_top_numb_reviews"
        android:gravity="center_vertical"
        android:lineSpacingExtra="3sp"
        android:text="@string/name"
        android:textAppearance="@style/name"
        app:layout_constraintStart_toStartOf="@+id/movie_img"
        app:layout_constraintTop_toTopOf="@+id/movie_img" />
    <TextView
        android:id="@+id/cinema_title"
        android:layout_width="@dimen/width_title_list"
        android:layout_height="@dimen/height_title_list"
        android:layout_marginStart="@dimen/margin_title_list"
        android:layout_marginTop="@dimen/margin_top_title_list"
        android:gravity="center_vertical"
        android:lineSpacingExtra="4sp"
        android:text="@string/cinema_title_name"
        android:textAppearance="@style/cinema_title_style"
        app:layout_constraintStart_toStartOf="@+id/movie_img"
        app:layout_constraintTop_toTopOf="@+id/movie_img" />
    <TextView
        android:id="@+id/duration"
        android:layout_width="@dimen/widht_duration"
        android:layout_height="@dimen/height_duration"
        android:layout_marginStart="@dimen/margin_start_duration"
        android:layout_marginTop="@dimen/margin_top_duration"
        android:textAppearance="@style/min"
        android:gravity="center_vertical"
        android:lineSpacingExtra="3sp"
        android:text="@string/min"
        app:layout_constraintStart_toStartOf="@+id/movie_img"
        app:layout_constraintTop_toTopOf="@+id/movie_img" />

    <ImageView
        android:id="@+id/ageRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_st_age_rate"
        android:layout_marginTop="@dimen/margin_top_age_rate"
        app:layout_constraintStart_toStartOf="@+id/bg"
        app:layout_constraintTop_toTopOf="@+id/bg"
        app:srcCompat="@drawable/ic_pgg" />

    <ImageView
        android:id="@+id/toLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_like"
        android:layout_marginEnd="@dimen/margin_end_like"
        app:layout_constraintEnd_toEndOf="@+id/bg"
        app:layout_constraintTop_toTopOf="@+id/bg"
        app:srcCompat="@drawable/ic_like" />
</androidx.constraintlayout.widget.ConstraintLayout>