<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color">

        <ImageView
            android:id="@+id/orig"
            android:layout_width="@dimen/width_of_main"
            android:layout_height="@dimen/height_of_main"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/margin_start_main"
            android:layout_marginTop="@dimen/margin_top_main"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_back"
            android:layout_marginTop="@dimen/margin_top_back"
            android:alpha="0.5"
            android:gravity="center_horizontal|center_vertical"
            android:lineSpacingExtra="2sp"
            android:text="@string/back"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/text_size_back"
            android:textStyle="normal"
            app:layout_constraintStart_toEndOf="@+id/path"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/path"
            android:layout_width="@dimen/widht_of_back"
            android:layout_height="@dimen/height_of_back"
            android:layout_marginStart="@dimen/margin_start_arrow"
            android:layout_marginTop="@dimen/margin_top_arrow"
            android:layout_marginBottom="@dimen/margin_bot_image_back"
            app:layout_constraintBottom_toBottomOf="@+id/orig"
            app:layout_constraintEnd_toStartOf="@+id/back"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/orig"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_path" />

        <ImageView
            android:id="@+id/some_id"
            android:layout_width="@dimen/widht_of_age"
            android:layout_height="@dimen/height_of_age"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginTop="@dimen/margin_top_age"
            android:gravity="center_horizontal|center_vertical"
            android:src="@drawable/ic_pg"
            android:text="@string/some_id"
            android:textAppearance="@style/some_id_style"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/name"
            android:layout_width="@dimen/width_title"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginTop="@dimen/margin_start_title"
            android:gravity="center_vertical"
            android:letterSpacing="-0.01"
            android:lineSpacingExtra="0sp"
            android:shadowColor="#80000000"
            android:shadowDx="0"
            android:shadowDy="6"
            android:shadowRadius="12"
            android:text="AVENGERS"
            android:textColor="#ECECEC"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/some_id" />

        <RatingBar
            android:id="@+id/rating_bar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="1dp"
            android:isIndicator="true"
            android:numStars="5"
            android:progressTint="#FF3365"
            android:rating="5"
            android:stepSize="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tag" />

        <TextView
            android:id="@+id/tag"
            android:layout_width="@dimen/width_genre"
            android:layout_height="@dimen/height_genre"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginTop="@dimen/margin_top_jenre"
            android:gravity="center_vertical"
            android:lineHeight="20sp"
            android:lineSpacingExtra="4sp"
            android:text="@string/tag"
            android:textAppearance="@style/tag_style"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/barrier"
            tools:targetApi="p" />

        <TextView
            android:id="@+id/reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="23dp"
            android:text="REVIEWS"
            android:textAppearance="@style/name"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@id/rating_bar"
            app:layout_constraintTop_toTopOf="@id/tag" />

        <TextView
            android:id="@+id/storyline"
            android:layout_width="@dimen/widht_storyline"
            android:layout_height="@dimen/height_storyline"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginTop="@dimen/margin_top_storyline"
            android:gravity="center_vertical"
            android:lineSpacingExtra="4sp"
            android:text="@string/storyline"
            android:textAppearance="@style/storyline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/reviews" />

        <TextView
            android:id="@+id/after_the_d"
            android:layout_width="@dimen/width_desc"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginTop="@dimen/margin_top_description"
            android:alpha="0.75"
            android:gravity="center_vertical"
            android:lineSpacingExtra="4sp"
            android:text="@string/after_the_d"
            android:textAppearance="@style/after_the_d"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/storyline" />

        <TextView
            android:id="@+id/heading"
            android:layout_width="@dimen/widht_cast"
            android:layout_height="@dimen/width_cast"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginTop="@dimen/margin_top_cast"
            android:gravity="center_vertical"
            android:lineSpacingExtra="8sp"
            android:text="@string/heading"
            android:textAppearance="@style/heading"
            android:textColor="@color/gradient"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/after_the_d" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/actor_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_start_recycleractor"
            android:orientation="horizontal"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heading" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="name" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>