<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <View
        android:id="@+id/bg_favourite"
        android:layout_width="@dimen/width_bg_list"
        android:layout_height="@dimen/height_bg_list"
        android:layout_marginStart="@dimen/marg_start_bg_list"
        android:layout_marginTop="@dimen/margin_top_view"
        android:background="@drawable/ic_bg"
        android:elevation="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/movie_img_favourite"
        android:layout_width="@dimen/width_img_list"
        android:layout_height="@dimen/height_img_list"
        android:layout_marginStart="@dimen/marg_st_img_list"
        android:layout_marginTop="@dimen/margin_top_image"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/heroes" />
    <View
        android:id="@+id/mask_favourite"
        android:layout_width="@dimen/width_msk"
        android:layout_height="@dimen/height_msk"
        android:layout_marginStart="@dimen/margin_st_msk"
        android:layout_marginTop="@dimen/marg_top_mask"
        android:background="@drawable/ic_mask___movie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/tag_favourite"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_tag_list"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/marg_st_tag_list"
        android:layout_marginTop="@dimen/marg_top_tag_list"
        android:gravity="center_vertical"
        android:lineSpacingExtra="3sp"
        android:text="@string/tag_list"
        android:textAppearance="@style/tag"
        app:layout_constraintStart_toStartOf="@+id/movie_img_favourite"
        app:layout_constraintTop_toTopOf="@+id/movie_img_favourite" />
    <RatingBar
        android:id="@+id/redstar_rating_favourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/ratingBarStyleSmall"
        android:numStars="5"
        android:progressTint="@color/white"
        android:progressBackgroundTint="#00FF00"
        android:layout_marginStart="@dimen/marginstart_first_star"
        android:layout_marginTop="@dimen/margin_top_first_star"
        android:stepSize="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/movie_img_favourite"
        app:srcCompat="@drawable/ic_star_icon" />

    <TextView
        android:id="@+id/name_favourite"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_reviews"
        android:layout_marginStart="@dimen/margin_start_reviews"
        android:layout_marginTop="@dimen/margin_top_numb_reviews"
        android:gravity="center_vertical"
        android:lineSpacingExtra="3sp"
        android:textAppearance="@style/name"
        app:layout_constraintStart_toEndOf="@+id/redstar_rating_favourite"
        app:layout_constraintTop_toTopOf="@+id/movie_img_favourite" />
    <TextView
        android:id="@+id/cinema_title_favourite"
        android:layout_width="@dimen/width_title_list"
        android:layout_height="@dimen/height_title_list"
        android:layout_marginStart="@dimen/margin_title_list"
        android:layout_marginTop="@dimen/margin_top_title_list"
        android:gravity="center_vertical"
        android:lineSpacingExtra="4sp"
        android:text="@string/cinema_title_name"
        android:textAppearance="@style/cinema_title_style"
        app:layout_constraintStart_toStartOf="@+id/movie_img_favourite"
        app:layout_constraintTop_toTopOf="@+id/movie_img_favourite" />
    <TextView
        android:id="@+id/duration_favourite"
        android:layout_width="@dimen/widht_duration"
        android:layout_height="@dimen/height_duration"
        android:layout_marginStart="@dimen/margin_start_duration"
        android:layout_marginTop="@dimen/margin_top_duration"
        android:textAppearance="@style/min"
        android:gravity="center_vertical"
        android:lineSpacingExtra="3sp"
        android:text="@string/min"
        app:layout_constraintStart_toStartOf="@+id/movie_img_favourite"
        app:layout_constraintTop_toTopOf="@+id/movie_img_favourite" />

    <ImageView
        android:id="@+id/ageRate_favourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_st_age_rate"
        android:layout_marginTop="@dimen/margin_top_age_rate"
        app:layout_constraintStart_toStartOf="@+id/bg_favourite"
        app:layout_constraintTop_toTopOf="@+id/bg_favourite"
        app:srcCompat="@drawable/ic_phone" />

    <TextView
        android:id="@+id/some_id_favourite"
        android:layout_width="24dp"
        android:layout_height="16dp"
        android:layout_centerVertical="true"
        android:text="13+"
        android:layout_marginStart="@dimen/margin_st_age_rate"
        android:layout_marginTop="11dp"
        android:textAppearance="@style/some_id"
        android:gravity="center_horizontal|center_vertical"
        app:layout_constraintStart_toStartOf="@+id/bg_favourite"
        app:layout_constraintTop_toTopOf="@+id/bg_favourite"
        />
    <xyz.hanks.library.bang.SmallBangView
        android:id="@+id/like_heart_favourite"
        android:layout_width="29dp"
        android:layout_marginTop="4dp"
        android:layout_height="29dp"
        app:layout_constraintEnd_toEndOf="@+id/bg_favourite"
        app:layout_constraintTop_toTopOf="@+id/bg_favourite">
        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="center"
            android:src="@drawable/heart_selector"
            app:layout_constraintEnd_toEndOf="@+id/bg_favourite"
            app:layout_constraintTop_toTopOf="@+id/bg_favourite"
            android:text="Hello World!"/>
    </xyz.hanks.library.bang.SmallBangView>

</androidx.constraintlayout.widget.ConstraintLayout>